src/objects/testObj__c.object
<CustomObject>
    <description>object for testing</description>
    <fields>
        <fullName>checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datetime__c</fullName>
        <label>datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>richtext__c</fullName>
        <label>richtext</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>text__c</fullName>
        <label>text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>testObj</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>testObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>testObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>